--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,9 @@
   <name>Archetype - SoftProject</name>
   <url>http://maven.apache.org</url>
   <properties>
+    <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.target>17</maven.compiler.target>
+    <sonar.organization>shareeforganization</sonar.organization>
   <sonar.organization>shareeforganization</sonar.organization>
   <sonar.host.url>https://sonarcloud.io</sonar.host.url>
 </properties>
